--- a/portfolio.html
+++ b/portfolio.html
@@ -18,130 +18,138 @@
   <body>
     <!--Header section-->
     <header class="header">
-      <div class="header__logo">
-        <a href="index.html"><span>Web</span>Studio</a>
-      </div>
-      <nav class="header__navigation">
-        <ul>
-          <li>
-            <a href="index.html">Studio</a>
-          </li>
-          <li>
-            <a href="portfolio.html">Portfolio</a>
-          </li>
-          <li>
-            <a href="contacts.html">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <div class="header__info">
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="callto:+12127724150">+1 212-772-4150</a>
+      <div class="container">
+        <div class="header__logo">
+          <a href="index.html"><span>Web</span>Studio</a>
+        </div>
+        <nav class="header__navigation">
+          <ul>
+            <li>
+              <a href="index.html">Studio</a>
+            </li>
+            <li>
+              <a href="portfolio.html">Portfolio</a>
+            </li>
+            <li>
+              <a href="contacts.html">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="header__info">
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="callto:+12127724150">+1 212-772-4150</a>
+        </div>
       </div>
     </header>
 
-    <!--Porfolio section-->
-    <main class="porfolio">
-      <!--Filters div-->
-      <div class="portfolio__filters">
-        <ul>
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web-sites</button></li>
-          <li><button type="button">Apps</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
-        </ul>
-      </div>
-      <!--Projects div-->
-      <div class="portfolio__projects">
-        <div>
-          <img
-            src="./images/portfolio1.jpg"
-            alt="Web-site called Technoduck"
-            width="294"
-          />
-          <p><span>Technoduck</span><br />Web-site</p>
+    <!--Portfolio section-->
+    <main class="portfolio">
+      <div class="container">
+        <!--Filters div-->
+
+        <div class="portfolio__filters">
+          <ul>
+            <li><button type="button">All</button></li>
+            <li><button type="button">Web-sites</button></li>
+            <li><button type="button">Apps</button></li>
+            <li><button type="button">Design</button></li>
+            <li><button type="button">Marketing</button></li>
+          </ul>
         </div>
-        <div>
-          <img
-            src="./images/portfolio2.jpg"
-            alt="Web-site called Technoduck"
-            width="294"
-          />
-          <p><span>Poster New Orlean vs Golden Star</span><br />Design</p>
-        </div>
-        <div>
-          <img
-            src="./images/portfolio3.jpg"
-            alt="Web-site called Technoduck"
-            width="294"
-          />
-          <p><span>Seafood Restaurant </span><br />Apps</p>
-        </div>
-        <div>
-          <img
-            src="./images/portfolio4.jpg"
-            alt="Web-site called Technoduck"
-            width="294"
-          />
-          <p><span>Project Prime</span><br />Marketing</p>
-        </div>
-        <div>
-          <img
-            src="./images/portfolio5.jpg"
-            alt="Web-site called Technoduck"
-            width="294"
-          />
-          <p><span>Project Boxes</span><br />Apps</p>
-        </div>
-        <div>
-          <img
-            src="./images/portfolio6.jpg"
-            alt="Web-site called Technoduck"
-            width="294"
-          />
-          <p><span>Inspiration has no Borders</span><br />Web-site</p>
-        </div>
-        <div>
-          <img
-            src="./images/portfolio7.jpg"
-            alt="Web-site called Technoduck"
-            width="294"
-          />
-          <p><span>Limited Edition</span><br />Design</p>
-        </div>
-        <div>
-          <img
-            src="./images/portfolio8.jpg"
-            alt="Web-site called Technoduck"
-            width="294"
-          />
-          <p><span>Project LAB</span><br />Marketing</p>
-        </div>
-        <div>
-          <img
-            src="./images/portfolio9.jpg"
-            alt="Web-site called Technoduck"
-            width="294"
-          />
-          <p><span>Growing Business</span><br />Apps</p>
+
+        <!--Projects div-->
+        <div class="portfolio__projects">
+          <div>
+            <img
+              src="./images/portfolio1.jpg"
+              alt="Web-site called Technoduck"
+              width="370"
+            />
+            <p><span>Technoduck</span><br />Web-site</p>
+          </div>
+          <div>
+            <img
+              src="./images/portfolio2.jpg"
+              alt="Web-site called Technoduck"
+              width="370"
+            />
+            <p><span>Poster New Orlean vs Golden Star</span><br />Design</p>
+          </div>
+          <div>
+            <img
+              src="./images/portfolio3.jpg"
+              alt="Web-site called Technoduck"
+              width="370"
+            />
+            <p><span>Seafood Restaurant </span><br />Apps</p>
+          </div>
+          <div>
+            <img
+              src="./images/portfolio4.jpg"
+              alt="Web-site called Technoduck"
+              width="370"
+            />
+            <p><span>Project Prime</span><br />Marketing</p>
+          </div>
+          <div>
+            <img
+              src="./images/portfolio5.jpg"
+              alt="Web-site called Technoduck"
+              width="370"
+            />
+            <p><span>Project Boxes</span><br />Apps</p>
+          </div>
+          <div>
+            <img
+              src="./images/portfolio6.jpg"
+              alt="Web-site called Technoduck"
+              width="370"
+            />
+            <p><span>Inspiration has no Borders</span><br />Web-site</p>
+          </div>
+          <div>
+            <img
+              src="./images/portfolio7.jpg"
+              alt="Web-site called Technoduck"
+              width="370"
+            />
+            <p><span>Limited Edition</span><br />Design</p>
+          </div>
+          <div>
+            <img
+              src="./images/portfolio8.jpg"
+              alt="Web-site called Technoduck"
+              width="370"
+            />
+            <p><span>Project LAB</span><br />Marketing</p>
+          </div>
+          <div>
+            <img
+              src="./images/portfolio9.jpg"
+              alt="Web-site called Technoduck"
+              width="370"
+            />
+            <p><span>Growing Business</span><br />Apps</p>
+          </div>
         </div>
       </div>
     </main>
 
     <!--Footer section-->
     <footer class="footer">
-      <div class="footer__logo">
-        <a href="index.html"><span>Web</span>Studio</a>
+      <div class="container">
+        <div class="footer__logo">
+          <a href="index.html"><span>Web</span>Studio</a>
+        </div>
+        <address class="footer__address">
+          <a href="http://maps.google.com/?q=695ParkAve,NY10065,USA"
+            ><span>695 Park Ave, NY 10065, USA</span></a
+          >
+          <br />
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
+          <a href="callto:+12127724150">+1 212-772-4150</a>
+        </address>
       </div>
-      <address class="footer__address">
-        <a href="http://maps.google.com/?q=695ParkAve,NY10065,USA"
-          ><span>695 Park Ave, NY 10065, USA</span></a
-        >
-        <br />
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
-        <a href="callto:+12127724150">+1 212-772-4150</a>
-      </address>
     </footer>
   </body>
 </html>
